<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/strips">
        <menu>

            <item
                android:id="@+id/fav"
                android:icon="@drawable/ic_action_heart"
                android:checked="true"
                android:title="@string/favorite" />

            <item
                android:id="@+id/last"
                android:icon="@drawable/ic_action_coffee"
                android:checked="true"
                android:title="@string/last" />

            <item
                android:id="@+id/random"
                android:icon="@drawable/ic_action_dice6"
                android:checked="true"
                android:title="@string/random" />

            <item
                android:id="@+id/readFromTheBeginning"
                android:icon="@drawable/ic_action_book"
                android:checked="true"
                android:title="@string/readFromTheBeginning" />

        </menu>
    </item>

    <item android:title="@string/other"
        android:layout_width="wrap_content">
        <menu>
            <item
                android:id="@+id/settings"
                android:checked="true"
                android:icon="@drawable/ic_action_reload"
                android:title="@string/settings" />

            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_action_mail"
                android:checked="true"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>