<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

        <com.commitstrip.commitstripreader.settings.CompressPreference
            android:summary="@string/pref_summary_compress_image"
            android:title="@string/pref_title_compress_image"
            android:key="COMPRESSION_IMAGE" />

        <CheckBoxPreference
            android:key="USE_VOLUME_KEY"
            android:title="@string/pref_title_should_use_volume_key"
            android:summary="@string/pref_summary_should_use_volume_key"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="RECEIVE_NOTIFICATION"
            android:title="@string/pref_title_should_receive_notification"
            android:summary="@string/pref_summary_should_receive_notification"
            android:defaultValue="true" />
</PreferenceScreen>
